[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.0.3"
googlemaps = "^4.6.0"
phonenumbers = "^8.12.44"
opencage = "^2.0.0"
folium = "^0.12.1"
dominate = "^2.6.0"
Flask-Bootstrap = "^3.3.7"
flask-nav = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"